@@ -1,3 +1,6 @@
+2004-08-02	blytkerchan
+	* fetch_and_add.c: new file
+
 2004-04-12	blytkerchan
 	* set.c: new file
 
